--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@tailwindcss/typography": "^0.5.15",
+    "@vidstack/react": "^1.12.12",
     "axios": "^1.7.9",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
@@ -25,7 +26,6 @@
     "html-react-parser": "^5.2.0",
     "lucide-react": "^0.468.0",
     "nanostores": "^0.11.3",
-    "plyr": "^3.7.8",
     "prettier": "^3.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
