--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-photo-view": "^1.2.6",
     "react-router": "^7.0.2",
     "react-router-dom": "^7.0.2",
+    "react-virtuoso": "^4.12.3",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
