--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^11.15.0",
     "html-react-parser": "^5.2.1",
     "lucide-react": "^0.468.0",
+    "media-icons": "^1.1.5",
     "nanostores": "^0.11.3",
     "prettier": "^3.4.2",
     "react": "^18.3.1",
