--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router": "^7.0.2",
     "react-router-dom": "^7.0.2",
     "react-virtuoso": "^4.12.3",
+    "sonner": "^1.7.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
