--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "media-icons": "^1.1.5",
     "nanostores": "^0.11.3",
     "prettier": "^3.4.2",
+    "pwa-asset-generator": "^6.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-photo-view": "^1.2.6",
