--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "dayjs": "^1.11.13",
     "framer-motion": "^11.15.0",
     "html-react-parser": "^5.2.1",
+    "i18next": "^24.2.1",
+    "i18next-browser-languagedetector": "^8.0.2",
     "lucide-react": "^0.468.0",
     "media-icons": "^1.1.5",
     "nanostores": "^0.11.3",
     "prettier": "^3.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.0",
     "react-photo-view": "^1.2.7",
     "react-router": "^7.0.2",
     "react-router-dom": "^7.0.2",
