feat: implement drawer for small screens

--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-virtuoso": "^4.12.3",
     "shiki": "^1.26.2",
     "sonner": "^1.7.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-safe-area": "^0.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
