--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroui/react": "^2.6.14",
     "@nanostores/persistent": "^0.10.2",
     "@nanostores/react": "^0.8.4",
-    "@nextui-org/react": "^2.6.11",
     "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
