--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "html-react-parser": "^5.2.2",
     "i18next": "^24.2.1",
     "i18next-browser-languagedetector": "^8.0.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
     "media-icons": "^1.1.5",
     "nanostores": "^0.11.3",
