--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroui/react": "^2.6.14",
+    "@icons-pack/react-simple-icons": "^11.2.0",
     "@nanostores/persistent": "^0.10.2",
     "@nanostores/react": "^0.8.4",
     "@radix-ui/react-collapsible": "^1.1.2",
@@ -39,6 +40,7 @@
     "react-router-dom": "^7.0.2",
     "react-virtuoso": "^4.12.3",
     "shiki": "^1.26.2",
+    "simple-icons": "^14.7.0",
     "sonner": "^1.7.1",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-safe-area": "^0.6.0"
