--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "dayjs": "^1.11.13",
+    "dexie": "^4.0.11",
+    "dexie-react-hooks": "^1.1.7",
     "framer-motion": "^12.4.4",
     "html-react-parser": "^5.2.2",
     "i18next": "^24.2.2",
